--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
+    "material-design-lite": "^1.3.0",
     "mobile-drag-drop": "^2.3.0-rc.1"
   },
   "devDependencies": {
